--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     },
     "default": "src/index.html",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "parcel src/index.html"
     },
     "author": "",
     "license": "ISC",
